WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217188
[PlayStation] Fix build break after
r267753
https://bugs.webkit.org/show_bug.cgi?id=217188
Summary
[PlayStation] Fix build break after r267753
Don Olmstead
Reported
2020-10-01 13:32:03 PDT
Looks like an issue with structured binding like
https://bugs.webkit.org/show_bug.cgi?id=201489
Attachments
Patch
(2.07 KB, patch)
2020-10-01 13:42 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-10-01 13:42:04 PDT
Created
attachment 410263
[details]
Patch
EWS
Comment 2
2020-10-01 16:10:52 PDT
Committed
r267857
: <
https://trac.webkit.org/changeset/267857
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410263
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-01 16:12:34 PDT
<
rdar://problem/69860615
>
Darin Adler
Comment 4
2020-10-10 13:20:19 PDT
Comment on
attachment 410263
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=410263&action=review
> Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:957 > + for (auto& iter : indexInfoMap) {
Just noticed this. There are a few things wrong with this: 1) On the WebKit project we prefer words over abbreviations. "iter" is not a word. 2) The identifier "iter" sounds like short for "iterator" but the iterators are automatically handled by a range-based for loop and so this is not an iterator. In contexts like this typically call this "key/value pair" or "pair", even though it’s not a std::pair.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug