[PlayStation] Fix build break after r267753 https://bugs.webkit.org/show_bug.cgi?id=217188

Reviewed by Fujii Hironori.

After r267753 the PlayStation builds started failing with an error around a structured
binding declaration of a tuple type.

No new tests. No change in behavior.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::handleDuplicateIndexIDs):


Canonical link: https://commits.webkit.org/229976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267857 268f45cc-cd09-0410-ab3c-d52691b4dbfc